# covid19-dashboard

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
covid19_dashboard/: dash_main.py
src/covid19_dashboard/: covid_JHU.py  dash.py  dash_main.py  launch_dash.py
src/covid19_dashboard/data_parser/: covid_JHU.py  world_pop.py
src/covid19_dashboard/data_parser/debug/: .gitignore
