[tool.poetry]
name = "covid19-dashboard"
version = "0.1.0"
description = ""
authors = ["Jose Cubero <cuberojose@gmal.com>"]
license = "MIT"
readme = "README.md"
# homepage = "git@github.com:jose-cubero/wiki-scraper.git"
# repository = "git@github.com:jose-cubero/wiki-scraper.git" 
# keywords = ["scrapping", "wikipedia", "hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.12.0"
dash = "^1.16.3"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
