[tool.poetry]
name = "covid19-dashboard"
version = "0.1.0"
description = ""
authors = ["Jose Cubero <cuberojose@gmal.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jose-cubero/covid19-dashboard"
repository = "https://github.com/jose-cubero/covid19-dashboard" 
keywords = ["covid19", "dash", "data-visualization"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.12.0"
dash = "^1.16.3"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.poetry.scripts]
launch_server = "covid19_dashboard.dash_main:launch_server"
cov_foo = "covid19_dashboard.dash_main:foo"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
